UI updates and links

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
     <head>
         <title>ScrollMagic On!</title>
-        <link rel="stylesheet" href="./css/styles.css" type="text/css">       
+        <link rel="stylesheet" href="./css/styles.css" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Oswald|Raleway&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    </head>       
     </head>
 
     <body>
@@ -18,6 +21,9 @@
                         </div>
                     </section>
         </div>
+        <footer>
+            <p>&copy; 2019 | Dony 'D' Made | <a href="https://github.com/donyd/ScrollMagicDemo" target="_blank">Git Source <i class="fab fa-github-square"></i></a> | <a href="https://youtu.be/6xq8Ki6bH3Y" target="_blank"><i class="fab fa-youtube-square"></i></a></p>
+            </footer>
     </body>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
