--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     </section>
         </div>
         <footer>
-            <p>&copy; 2019 | Dony 'D' Made | <a href="https://github.com/donyd/ScrollMagicDemo" target="_blank">Git Source <i class="fab fa-github-square"></i></a> | <a href="https://youtu.be/6xq8Ki6bH3Y" target="_blank"><i class="fab fa-youtube-square"></i></a></p>
+            <p>&copy; 2019 | Dony 'D' Made | <a href="https://github.com/donyd/ScrollMagicDemo" target="_blank">Git Source <i class="fab fa-github-square"></i></a> | <a href="https://youtu.be/RJ_lLOESI6o" target="_blank"><i class="fab fa-youtube-square"></i></a></p>
             </footer>
     </body>
 
